Correção de vários aspectos, serviço, marca e modelo finalizados ou encaminhados. Falta motor, veiculo->cor e limpar o código, bem como, conferir banco de dados